# dep

./: CMakeLists.txt
inc/: greet.hpp
inc/goodbye/: goodbye.hpp
src/: greet.cpp
